tests/NormalTests/paczka2/big_fuzzy/41585180.err
Error in line 3: T624pK4v A389 92,7
Error in line 27: A389 A389 21,1
Error in line 31: GkYDiYWFYTp S924 16,0
Error in line 18: cn78AxeWe1n A389 100,0
Error in line 29: A389 A254 61,4
Error in line 37: cn78AxeWe1n A729 50,6
Error in line 51: cn78AxeWe1n S924 95,9
Error in line 55: GkYDiYWFYTp A254 204,04
Error in line 25: Gzaa A389 49,1
Error in line 58: A389 S924 7,6
Error in line 54: GkYDiYWFYTp A254 70,5
Error in line 62: GkYDiYWFYTp A389 96,1
Error in line 68: GkYDiYWFYTp A729 66,5
Error in line 71: GkYDiYWFYTp S924 27,1
Error in line 57: Gzaa S924 93,8
Error in line 76: GkYDiYWFYTp A729 76,4
Error in line 84: GkYDiYWFYTp A389 75,7
Error in line 83: Gzaa A729 67,2
Error in line 91: GkYDiYWFYTp A729 152,7
Error in line 103: A389 A389 42,9
Error in line 107: GkYDiYWFYTp A254 64,2
Error in line 112: GkYDiYWFYTp S924 32,2
Error in line 116: GkYDiYWFYTp A729 90,8
Error in line 93: bPyrJhmYN S924 93,6
Error in line 122: bPyrJhmYN A729 7,1
Error in line 128: bPyrJhmYN S924 2,4
Error in line 133: bPyrJhmYN A389 946,8
Error in line 137: bPyrJhmYN A254 13,8
Error in line 131: Gzaa A389 20,8
Error in line 149: Gzaa S924 78,6
Error in line 147: IJeQK A389 23,1
Error in line 155: bPyrJhmYN A729 96,8
Error in line 156: IJeQK A254 55,1
Error in line 184: GkYDiYWFYTp S924 5L,2
Error in line 186: A389 S924 28,9
Error in line 182: Gzaa A389 81,1
Error in line 190: GkYDiYWFYTp S924 207,2
Error in line 188: A389 A254 0,6
Error in line 196: GkYDiYWFYTp A729 60,6
Error in line 197: A389 A389 92,4
Error in line 205: cn78AxeWe1n S924 16,7
Error in line 174: IJeQK A729 333,7
Error in line 210: T624pK4v A729 64,5
Error in line 209: cn78AxeWe1n A389 16,1
Error in line 215: Gzaa A729 65,0
Error in line 226: IJeQK A254 60,3
Error in line 239: GkYDiYWFYTp A729 0,1
